fixed layout issues

--- a/src/app/admin/modules/layout/mobile/admin-layout-mobile.component.scss
+++ b/src/app/admin/modules/layout/mobile/admin-layout-mobile.component.scss
@@ -1,6 +1,5 @@
 mat-drawer-container {
   width: 100%;
-  height: 100%;
 }
 
 .mat-drawer-side {
@@ -10,7 +9,6 @@ mat-drawer-container {
 div {
   display: flex;
   flex-flow: column;
-  height: 100%;
 }
 
 main {
